# FasterAnsys

./: .bazelrc  WORKSPACE.bazel  bazel-FasterAnsys  bazel-bin  bazel-out  bazel-testlogs  requirements.txt  setup.sh
src/: BUILD.bazel  IGLUtils.cpp  IGLUtils.h  main.cpp
src/GUI/: GUI.cpp  GUI.h
src/solvers/: Solver.h
src/solvers/CUDA/: CUDASolver.cu  CUDASolver.h
src/solvers/cpu/: CPUSolver.cpp  CPUSolver.h
src/solvers/gpu/: CUDASolver.cu  CUDASolver.h
src/solvers/helpers/: tetra.cpp  tetra.h
