load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

# cuda_library(
#     name = "kernel",
#     srcs = ["cuda/cuda.cu"],
#     hdrs = ["cuda/cuda.h"],
# )


cc_binary(
    name = "FasterAnsys",
    srcs = glob(["**/*"], exclude = ["BUILD.bazel"]),
    deps = ["@libigl//:libigl", "@unvpp//:unvpp"],
    copts = ["-I/usr/include/eigen3/"],
)